# MLT

./: .env.example  Dockerfile  README.md  pyproject.toml
app/: bootstrap.py  main.py
app/core/: config.py  middleware.py  security.py
app/db/: models.py  session.py
app/modules/audit/: router.py  service.py
app/modules/auth/: deps.py  router.py  schemas.py  service.py
app/modules/org/: router.py
app/modules/personnel/: router.py
app/modules/rbac/: deps.py  policy.py
app/modules/settings/: router.py  schemas.py  service.py
docker/: docker-compose.yml
tests/: conftest.py  test_audit_hash_chain.py  test_auth_flow.py  test_rbac_policy.py  test_security_helpers.py  test_settings_service.py
